# AssemblyLab

./: .gitattributes  .gitignore  Dockerfile  README.md  newproj.sh  runcontainer.sh
0-template/: .env  .gitignore  CMakeLists.txt
0-template/src/: main.asm
EchoInput/: .env  build.sh
EchoInput/src/: main.asm
